test/Fail/UnquoteDefineDataOverFun.err
UnquoteDefineDataOverFun.agda:9.1-10.20: error: [GenericError]
UnquoteDefineDataOverFun.foo is not declared as a datatype or
record, or it already has a definition.
